--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../loginpage/csslogin.css">
+    <link rel="stylesheet" href="style.css">
 
 
     <title>Login Page</title>
@@ -12,8 +12,8 @@
 
 <body>
     <div class="container">
-        <a href="../userlogin/user.html" class="login-button">Admin Login</a>
-        <a href="../voterlogin/voterlogin.html" class="login-button">Voter Login</a>
+        <a href="index.html" class="login-button">Admin Login</a>
+        <a href="index.html" class="login-button">Voter Login</a>
     </div>
 
 </body>
