--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <div class="container">
+        <img src="your-image-url.jpg" alt="Description of image" class="img-responsive">
         <a href="index.html" class="login-button">Admin Login</a>
         <a href="index.html" class="login-button">Voter Login</a>
     </div>
