--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container">
-        <img src="siteshsr/login/blob/main/image.jpg">
+        <img src="main/login/image.jpg">
         <a href="index.html" class="login-button">Admin Login</a>
         <a href="index.html" class="login-button">Voter Login</a>
     </div>
